Add appointments page and logic.
